quotes on small viewport fixed

--- a/css/components/blockquote.css
+++ b/css/components/blockquote.css
@@ -1,18 +1,16 @@
 blockquote {
-    margin: 0;
-   
+    margin: 0;  
 }
 
 blockquote p {
     font-family: 'Crimson Text', serif;
-    font-size: 24px;
-    
+    font-size: 20px;  
 }
 
 .blockquote-container{
     border-left: 5px solid var(--purple);
-    padding-left: 60px;
-    margin: 120px 0; 
+    padding-left: 20px;
+    margin: 60px 0; 
 }
 
 figcaption{
@@ -26,3 +24,21 @@ blockquote p::before {
 blockquote p::after {
     content: '\201D';
 }
+@media screen 
+    and (min-device-width: 1200px) 
+    and (-webkit-min-device-pixel-ratio: 1) {
+        
+        
+        blockquote p {
+            font-size: 24px;  
+        }
+        
+        .blockquote-container{
+            padding-left: 60px;
+            margin: 120px 0; 
+        }
+        
+        figcaption{
+            font-size: 18px;
+        }
+    }
